[package]
name = "allmystuff-graph"
description = "The AllMyStuff device graph — capabilities, routes, isolatable groups, and the own-vs-share authorization model layered over a MyOwnMesh network."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
