[package]
name = "allmystuff-term"
description = "AllMyStuff terminal (amst) — open a real shell on any machine you own, over the mesh, from your own terminal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The standalone `amst` command — a thin shim over the library's `run`.
[[bin]]
name = "amst"
path = "src/main.rs"

[lib]
name = "allmystuff_term"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Wire types (NodeProfile, the terminal feature tag) and the terminal event
# enum — the lightweight library crates, no media stack.
allmystuff-protocol = { workspace = true }
allmystuff-session = { workspace = true }
# Locating the `allmystuff-gui` desktop app to open when no node is running
# (so the node has a visible owner) — the same discovery the CLI's bare
# invocation uses; the crate also resolves `allmystuff-serve`.
allmystuff-service = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Async runtime + the local-socket transport to the node control socket. "net"
# backs interprocess's tokio integration; the rest matches the workspace base.
tokio = { workspace = true, features = ["net"] }
# Local IPC: the same crate (and version) the node uses for the control socket,
# so address resolution stays identical across both ends of the wire.
interprocess = { workspace = true }
# Cross-platform raw mode + terminal size — macOS / Linux / Windows in one API.
crossterm = { workspace = true }
dirs = { workspace = true }
