[package]
name = "allmystuff-updater"
description = "Self-update for AllMyStuff: configurable release feed, SHA-256 verification, stage-then-apply — modelled on myownmesh-updater, self-contained."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
