# The engine adapter for the mobile app: it backs
# `allmystuff-mobile-core`'s `MeshClient` seam with an embedded
# `myownmesh-core` engine, so the phone joins the mesh as a real peer
# in-process (iOS forbids spawning the `myownmesh serve` daemon the desktop
# uses). Its own Cargo workspace, like `gui/mobile` and `node/`: it carries
# the heavy engine tree (webrtc-rs / ring / tokio) that the lightweight root
# library workspace deliberately excludes. Builds and unit-tests on the host
# (x86_64) — `ring` compiles natively there — so the wiring is verified in CI
# without a device; the cross-compile to iOS/Android happens in `gui/mobile`.
[workspace]

[package]
name = "allmystuff-mesh"
version = "0.2.19"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
authors = ["Chris Paul"]
description = "Backs allmystuff-mobile-core's MeshClient seam with an embedded myownmesh-core engine, so the phone is a first-class mesh peer in-process."

[dependencies]
# The phone's transport-agnostic brain: the `MeshClient` trait this crate
# implements, `classify`, and the typed `Inbound`. Pure Rust.
allmystuff-mobile-core = { path = "../../crates/allmystuff-mobile-core" }
# The wire vocabulary: the five channel constants + NodeProfile / ControlMessage.
allmystuff-protocol = { path = "../../crates/allmystuff-protocol" }
# The mesh engine itself, embedded in-process. Pinned to the merge commit that
# added `Mesh::open_with_identity` (the identity-injection seam a phone needs).
myownmesh-core = { git = "https://github.com/mrjeeves/MyOwnMesh", rev = "d468fca0f614a24a07f8dd2fe4fa4b316fdcb931" }

# Same major as the engine's ed25519-dalek so `SigningKey` is the *same* type
# and `Identity::from_signing_key` accepts the key we build from the seed.
ed25519-dalek = "2"
serde_json = "1"
thiserror = "1"
# The engine is async; this crate owns a runtime and bridges to the sync
# `MeshClient` surface.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
