# The GUI's Rust crate lives outside the main Cargo workspace so a
# `cargo build --workspace` / `cargo test --workspace` at the repo root
# stays fast and webview-free (no Tauri compile). An empty `[workspace]`
# table makes this crate its own single-member workspace root — the same
# split MyOwnMesh uses for its GUI.
[workspace]

[package]
name = "allmystuff-gui"
version = "0.1.0"
description = "AllMyStuff GUI — Tauri shell: scans this machine and talks to the myownmesh daemon over its control socket."
authors = ["Chris Paul"]
license = "MIT"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "allmystuff-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async runtime — control-socket client + Tauri commands.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }

# Local IPC: same crate the daemon uses, so control-socket address
# resolution stays identical across both ends of the wire.
interprocess = { version = "2", features = ["tokio"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
parking_lot = "0.12"

# System RNG for minting a fleet's shared key (the owned-roster grouping
# secret). Already in the resolved tree via Tauri/Tokio; pulled in directly
# here so the key generation is explicit.
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AllMyStuff's own crates — the scanner, the graph model, the wire types,
# and the hardware→capability bridge. Pulled by path from the sibling
# workspace; the GUI is the one place all four come together.
allmystuff-inventory = { path = "../../crates/allmystuff-inventory" }
allmystuff-graph = { path = "../../crates/allmystuff-graph" }
allmystuff-protocol = { path = "../../crates/allmystuff-protocol" }
allmystuff-bridge = { path = "../../crates/allmystuff-bridge" }
allmystuff-session = { path = "../../crates/allmystuff-session" }
allmystuff-updater = { path = "../../crates/allmystuff-updater" }

# Cross-platform audio capture + playback for the media plane — CoreAudio
# on macOS, WASAPI on Windows, ALSA on Linux. Same crate (and version)
# MyOwnLLM uses for its audio.
cpal = "0.15"
xcap = "0.9"
# `simd` = runtime-detected AVX2 fDCT/color-convert — a multiple of encode
# speed on typical x86-64 desktops, plain safe Rust elsewhere.
jpeg-encoder = { version = "0.7", features = ["simd"] }
enigo = "0.6"
# H.264 encode for the mesh's video track lane (Cisco's encoder, built
# from source — needs only a C/C++ toolchain). MJPEG stays as the
# fallback wherever this can't run or the peer can't decode.
openh264 = "0.9"
# Access units ride the daemon control socket as base64 (same encoding
# the session crate's media frames use).
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The media plane touches every screen pixel every frame; the crates doing
# that work get speed while the rest of the app keeps optimizing for size —
# and dev builds get the same treatment so `just dev` streams at a usable
# rate instead of running the pixel loops unoptimized.
[profile.release.package.jpeg-encoder]
opt-level = 3
[profile.release.package.openh264]
opt-level = 3
[profile.release.package.openh264-sys2]
opt-level = 3
[profile.release.package.xcap]
opt-level = 3
[profile.release.package.image]
opt-level = 3

[profile.dev.package.jpeg-encoder]
opt-level = 3
[profile.dev.package.openh264]
opt-level = 3
[profile.dev.package.openh264-sys2]
opt-level = 3
[profile.dev.package.xcap]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
